添加底部消息提醒，标签BadgeView 添加Fragment状态管理

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:id="@+id/tab_friedns"
             app:tabTitle="发现"
             app:tabTitleColor="@color/tab_bg_green"
             app:tabIcon="@mipmap/discover"
